@@ -1,0 +1,44 @@
+#!/bin/bash
+
+root=`dirname $0`/..
+avail_packages=""
+while read line; do
+    if echo $line | egrep -q '^(#.*|[[:space:]]*)$'; then
+        continue
+    elif echo $line | egrep -qv '^[[:space:]]*[[:alnum:]_-]+:.*$'; then
+        echo "Warning: bad PACKAGES statement: $line">&2
+        continue
+    fi
+    package=`echo $line|sed -re 's/^[[:space:]]*([[:alnum:]_-]+):.*$/\\1/'`
+    avail_packages="$avail_packages $package"
+done < $root/PACKAGES
+
+if test -z "$1" -o -n "$4"; then
+    echo "usage: $0 PACKAGE [BASE-URL] [BRANCH-SUFFIX]"
+    echo
+    echo "available packages:$avail_packages"
+    echo
+    exit 1
+fi
+
+if test -z "$2"; then
+    baseurl=http://arch.gna.org/guile-gnome/bzr
+    echo "no base url specified, defaulting to $baseurl"
+else
+    baseurl=$2
+fi
+
+package=$1
+echo "configuring $root as package $package"
+subpackages=`grep $package: $root/PACKAGES|sed -re 's/^[^:]*:(.*)$/\\1/'`
+
+branch_suffix=$3
+
+for package in $subpackages; do
+    if test -d $root/$package; then
+        echo "warning, directory $root/$package already exists, not fetching"
+    else
+        echo "fetching $package from $baseurl/$package$branch_suffix"
+        bzr get $baseurl/$package$branch_suffix $root/$package
+    fi
+done
